--- a/wren-ai-service/pyproject.toml
+++ b/wren-ai-service/pyproject.toml
@@ -36,6 +36,7 @@ jsonschema = "^4.23.0"
 litellm = "^1.75.2"
 boto3 = "^1.34.34" # Litellm requires boto3 = 1.34.34
 qdrant-client = "==1.11.0"
+langchain-core = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
@@ -51,6 +52,7 @@ deepeval = "^1.0.6"
 tomlkit = "^0.13.0"
 nltk = "^3.9.1"
 psycopg2 = "^2.9.10"
+langchain = "^1.0.2"
 
 [tool.poetry.group.eval.dependencies]
 gitpython = "^3.1.43"
