--- a/wren-ui/package.json
+++ b/wren-ui/package.json
@@ -3,9 +3,9 @@
   "version": "0.31.2",
   "private": true,
   "scripts": {
-    "dev": "TZ=UTC next dev",
+    "dev": "cross-env TZ=UTC next dev",
     "build": "NODE_OPTIONS=--max-old-space-size=8192 next build",
-    "start": "TZ=UTC next start",
+    "start": "cross-env TZ=UTC next start",
     "lint": "yarn check-types && next lint",
     "test": "jest",
     "test:e2e": "npx playwright install chromium && npx playwright test",
@@ -63,6 +63,7 @@
     "antd": "4.20.4",
     "clsx": "^2.1.1",
     "cron-parser": "^5.1.1",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.11",
     "driver.js": "^1.3.1",
     "duckdb": "^0.10.1",
